@@ -124,6 +124,10 @@ namespace Hantek {
 			double setTriggerLevel(unsigned int channel, double level);
 			int setTriggerSlope(Dso::Slope slope);
 			double setTriggerPosition(double position);
+			
+#ifdef DEBUG
+			int stringCommand(QString command);
+#endif
 	};
 }
 
